feat: add comprehensive test suite and update dependencies
- Add professional-grade test suite with 139 tests (97.36% coverage)
  - filters-env.test.ts: Business logic filtering and sorting (38 tests)
  - track-env.test.ts: Analytics and affiliate tracking (16 tests)
  - tools-registry.test.ts: Tools registry system (29 tests)
  - AuthModal.test.tsx: Authentication modal component (34 tests)
  - RatingStars.test.tsx: Star rating component (22 tests)

- Update all dependencies to latest versions
  - Next.js: 14.2.0 → 16.0.1
  - React: 18.3.0 → 19.x
  - Prisma: 5.15.0 → 6.18.0
  - TypeScript: 5.9.3
  - Vitest: 4.0.5 + React Testing Library 16.3.0

- Fix TypeScript configuration
  - Remove deprecated baseUrl option
  - Update tsconfig.json for TypeScript 7.0 compatibility

- Add Prisma tooling
  - Cross-env scripts for database operations
  - Prisma helper script for PowerShell
  - Comprehensive Prisma usage guide

- Add test documentation
  - TEST_SUMMARY.md with complete coverage metrics
  - Test running instructions
  - Future test roadmap

All tests passing ✅ with excellent coverage metrics

--- a/package.json
+++ b/package.json
@@ -13,13 +13,23 @@
     "lint": "turbo lint",
     "format": "turbo run format --parallel",
     "typecheck": "turbo typecheck",
+    "test": "turbo run test",
+    "test:watch": "turbo run test:watch",
+    "test:ui": "turbo run test:ui",
     "clean": "turbo clean && rm -rf node_modules",
     "postinstall": "turbo run postinstall --parallel"
   },
   "devDependencies": {
-    "turbo": "^2.0.0",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@vitejs/plugin-react": "^5.1.0",
+    "@vitest/ui": "^4.0.5",
+    "jsdom": "^27.0.1",
     "prettier": "^3.3.0",
-    "typescript": "^5.5.0"
+    "turbo": "^2.5.8",
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.5"
   },
   "engines": {
     "node": ">=18.17.0",
