--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -12,6 +12,10 @@
     "prisma:generate": "prisma generate",
     "prisma:format": "prisma format",
     "prisma:studio": "prisma studio",
+    "prisma:push": "cross-env DATABASE_URL=\"postgresql://postgres.nzkxfrvejnicvgizlmza:ddSnabadRAHCAxw3@aws-1-sa-east-1.pooler.supabase.com:6543/postgres?pgbouncer=true\" DIRECT_URL=\"postgresql://postgres.nzkxfrvejnicvgizlmza:ddSnabadRAHCAxw3@aws-1-sa-east-1.pooler.supabase.com:5432/postgres\" prisma db push",
+    "prisma:migrate": "cross-env DATABASE_URL=\"postgresql://postgres.nzkxfrvejnicvgizlmza:ddSnabadRAHCAxw3@aws-1-sa-east-1.pooler.supabase.com:6543/postgres?pgbouncer=true\" DIRECT_URL=\"postgresql://postgres.nzkxfrvejnicvgizlmza:ddSnabadRAHCAxw3@aws-1-sa-east-1.pooler.supabase.com:5432/postgres\" prisma migrate dev",
+    "db:push": "pnpm prisma:push",
+    "db:studio": "pnpm prisma:studio",
     "postinstall": "prisma generate"
   },
   "dependencies": {
@@ -19,24 +23,25 @@
     "@getbrevo/brevo": "^3.0.1",
     "@ia-next/database": "workspace:*",
     "@ia-next/typescript-config": "workspace:*",
-    "@prisma/client": "^5.15.0",
-    "@sentry/nextjs": "^8.55.0",
+    "@prisma/client": "^6.18.0",
+    "@sentry/nextjs": "^10.22.0",
     "@upstash/ratelimit": "^2.0.6",
-    "@upstash/redis": "^1.35.3",
-    "firebase-admin": "^12.1.0",
+    "@upstash/redis": "^1.35.6",
+    "firebase-admin": "^13.5.0",
     "ioredis": "^5.4.0",
-    "mercadopago": "^2.8.0",
-    "next": "^14.2.0",
-    "next-auth": "^4.24.11",
+    "mercadopago": "^2.9.0",
+    "next": "^16.0.1",
+    "next-auth": "^4.24.13",
     "zod": "^4.1.5"
   },
   "devDependencies": {
     "@ia-next/eslint-config": "workspace:*",
     "@ia-next/prettier-config": "workspace:*",
-    "@types/node": "^20.14.0",
-    "eslint": "^8.57.0",
+    "@types/node": "^24.9.2",
+    "cross-env": "^10.1.0",
+    "eslint": "^9.38.0",
     "prettier": "^3.3.0",
-    "prisma": "^5.15.0",
-    "typescript": "^5.5.0"
+    "prisma": "^6.18.0",
+    "typescript": "^5.9.3"
   }
 }
