--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,32 +8,37 @@
     "start": "next start --port 3000",
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
-    "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,css,md}\""
+    "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,css,md}\"",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
     "@ia-next/typescript-config": "workspace:*",
     "@ia-next/ui": "workspace:*",
-    "@sentry/nextjs": "^8.55.0",
-    "@upstash/ratelimit": "^2.0.0",
-    "@upstash/redis": "^1.35.3",
-    "lucide-react": "^0.544.0",
-    "next": "^14.2.0",
-    "next-auth": "^4.24.11",
-    "react": "^18.3.0",
-    "react-dom": "^18.3.0"
+    "@sentry/nextjs": "^10.22.0",
+    "@upstash/ratelimit": "^2.0.6",
+    "@upstash/redis": "^1.35.6",
+    "lucide-react": "^0.548.0",
+    "next": "^16.0.1",
+    "next-auth": "^4.24.13",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
     "@ia-next/eslint-config": "workspace:*",
     "@ia-next/prettier-config": "workspace:*",
-    "@types/node": "^20.14.0",
-    "@types/react": "^18.3.0",
-    "@types/react-dom": "^18.3.0",
+    "@types/node": "^24.9.2",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
+    "@vitest/coverage-v8": "^4.0.5",
     "autoprefixer": "^10.4.21",
-    "eslint": "^8.57.0",
+    "eslint": "^9.38.0",
     "postcss": "^8.5.6",
     "prettier": "^3.3.0",
-    "tailwindcss": "^3.4.0",
-    "typescript": "^5.5.0"
+    "tailwindcss": "^4.1.16",
+    "typescript": "^5.9.3"
   }
 }
