--- a/packages/@ia-next/ui/package.json
+++ b/packages/@ia-next/ui/package.json
@@ -10,17 +10,17 @@
     "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,css,md}\""
   },
   "dependencies": {
-    "react": "^18.3.0"
+    "react": "^19.2.0"
   },
   "devDependencies": {
-    "@types/react": "^18.3.0",
     "@ia-next/eslint-config": "workspace:*",
     "@ia-next/prettier-config": "workspace:*",
     "@ia-next/typescript-config": "workspace:*",
-    "eslint": "^8.57.0",
+    "@types/react": "^19.2.2",
+    "eslint": "^9.38.0",
     "prettier": "^3.3.0",
-    "typescript": "^5.5.0",
-    "tailwindcss": "^3.4.0"
+    "tailwindcss": "^4.1.16",
+    "typescript": "^5.9.3"
   },
   "peerDependencies": {
     "react": "^18.3.0"
