security: CRITICAL - Remove exposed database credentials
🚨 SECURITY INCIDENT RESPONSE

GitGuardian detected exposed PostgreSQL credentials in repository.
This commit removes all hardcoded credentials and implements secure practices.

Changes:
- 🔒 Remove hardcoded credentials from package.json scripts
- 🔒 Remove hardcoded credentials from prisma-helper.ps1
- ✅ Implement dotenv-cli for secure environment variable loading
- 📄 Add SECURITY_INCIDENT.md with full incident report
- 📝 Update PRISMA_GUIDE.md with security warnings

URGENT ACTION REQUIRED:
1. Rotate database password in Supabase Dashboard immediately
2. Update .env files locally with new credentials
3. Update Vercel environment variables
4. Monitor database access logs for 48 hours

Files affected:
- apps/api/package.json (replaced hardcoded URLs with dotenv)
- apps/api/prisma-helper.ps1 (now loads from .env)
- apps/api/PRISMA_GUIDE.md (added security warnings)
- SECURITY_INCIDENT.md (full incident report)

Related Issue: GitGuardian Alert - PostgreSQL URI exposure
Severity: CRITICAL
Status: Code fixed - Credential rotation pending

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -12,8 +12,8 @@
     "prisma:generate": "prisma generate",
     "prisma:format": "prisma format",
     "prisma:studio": "prisma studio",
-    "prisma:push": "cross-env DATABASE_URL=\"postgresql://postgres.nzkxfrvejnicvgizlmza:ddSnabadRAHCAxw3@aws-1-sa-east-1.pooler.supabase.com:6543/postgres?pgbouncer=true\" DIRECT_URL=\"postgresql://postgres.nzkxfrvejnicvgizlmza:ddSnabadRAHCAxw3@aws-1-sa-east-1.pooler.supabase.com:5432/postgres\" prisma db push",
-    "prisma:migrate": "cross-env DATABASE_URL=\"postgresql://postgres.nzkxfrvejnicvgizlmza:ddSnabadRAHCAxw3@aws-1-sa-east-1.pooler.supabase.com:6543/postgres?pgbouncer=true\" DIRECT_URL=\"postgresql://postgres.nzkxfrvejnicvgizlmza:ddSnabadRAHCAxw3@aws-1-sa-east-1.pooler.supabase.com:5432/postgres\" prisma migrate dev",
+    "prisma:push": "dotenv -e .env -- prisma db push",
+    "prisma:migrate": "dotenv -e .env -- prisma migrate dev",
     "db:push": "pnpm prisma:push",
     "db:studio": "pnpm prisma:studio",
     "postinstall": "prisma generate"
@@ -39,6 +39,7 @@
     "@ia-next/prettier-config": "workspace:*",
     "@types/node": "^24.9.2",
     "cross-env": "^10.1.0",
+    "dotenv-cli": "^11.0.0",
     "eslint": "^9.38.0",
     "prettier": "^3.3.0",
     "prisma": "^6.18.0",
