--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -21,11 +21,24 @@
     "@sentry/nextjs": "^10.22.0",
     "@upstash/ratelimit": "^2.0.6",
     "@upstash/redis": "^1.35.6",
+    "csv-stringify": "^6.6.0",
+    "d3": "^7.9.0",
+    "date-fns": "^4.1.0",
+    "html-to-image": "^1.11.13",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.548.0",
     "next": "^16.0.1",
     "next-auth": "^4.24.13",
+    "papaparse": "^5.5.3",
+    "pdfkit": "^0.17.2",
+    "plotly.js": "^3.1.2",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "recharts": "^3.3.0",
+    "simple-statistics": "^7.8.8",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@ia-next/eslint-config": "workspace:*",
