--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -11,7 +11,9 @@
       "@/components/*": ["./src/components/*"],
       "@/styles/*": ["./src/styles/*"],
       "@/lib/*": ["./src/lib/*"],
-      "@/tools/llm/*": ["./src/app/(portals)/ia/(marketing)/herramientas/como-funcionan-llm/src/*"]
+      "@/tools/llm/*": [
+        "./src/app/(portals)/ia/(marketing)/herramientas/como-funcionan-llm/src/*"
+      ]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
