feat: Integrate 5 educational tools across IA and Environmental portals
- Integrated como-funcionan-llm (IA portal - LLM education)
- Integrated modelos-difusion (IA portal - Diffusion models education)
- Integrated visor-difusion (IA portal - Interactive diffusion visualization)
- Integrated generador-matrices (Ambiental portal - EIA matrix generator)
- Integrated analisis-correlaciones (Ambiental portal - Statistical correlation analysis)

Features:
- Fixed Next.js 16 route handler params (Promise<params> syntax)
- Created proper path mappings in tsconfig.json for @/ imports
- Added context and analytics integration for each tool
- Fixed TypeScript RefObject type issues
- Fixed string formatting in analytics.ts files
- All 5 tools now compile successfully and route correctly

Tools pending CLI integration:
- filtrado-ia (IA portal placeholder)
- visor-mapas-ambientales (Ambiental portal placeholder)
- normas-ambientales (Ambiental portal placeholder)

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -44,6 +44,7 @@
     "@ia-next/eslint-config": "workspace:*",
     "@ia-next/prettier-config": "workspace:*",
     "@types/node": "^24.9.2",
+    "@types/papaparse": "^5.3.16",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "@vitest/coverage-v8": "^4.0.5",
