--- a/package.json
+++ b/package.json
@@ -35,5 +35,10 @@
     "node": ">=18.17.0",
     "pnpm": ">=8.0.0"
   },
-  "packageManager": "pnpm@8.15.6"
+  "packageManager": "pnpm@8.15.6",
+  "dependencies": {
+    "@supabase/supabase-js": "^2.78.0",
+    "maplibre-gl": "^5.10.0",
+    "zod": "^4.1.5"
+  }
 }
