fix: resolve CSS lint warnings for Tailwind @tailwind and @apply directives
- Added .stylelintrc.json with Tailwind-aware configuration
- Configured CSS lint to ignore unknown Tailwind at-rules
- Updated VS Code settings to suppress CSS lint unknownAtRules warning
- Added stylelint extension recommendation to .vscode/extensions.json
- Installed stylelint and stylelint-config-standard as dev dependencies

This resolves all CSS warnings in visor-mapas-ambientales/globals.css
by properly configuring the linter to recognize Tailwind directives:
- @tailwind base, components, utilities
- @apply, @layer

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,5 +32,11 @@
     ["cva\\(([^)]*)\\)", "[\"'`]([^\"'`]*).*?[\"'`]"],
     ["cx\\(([^)]*)\\)", "(?:'|\"|`)([^']*)(?:'|\"|`)"]
   ],
+  "css.lint.unknownAtRules": "ignore",
+  "[css]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "stylelint.enable": true,
+  "stylelint.validate": ["css", "scss", "postcss"],
   "chat.mcp.access": "all"
 }
