--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@vitest/ui": "^4.0.5",
     "jsdom": "^27.0.1",
     "prettier": "^3.3.0",
+    "stylelint": "^16.25.0",
+    "stylelint-config-standard": "^39.0.1",
     "turbo": "^2.5.8",
     "typescript": "^5.9.3",
     "vitest": "^4.0.5"
