chore: agregar .stylelintignore y mejorar configuración de VS Code
- Crear .stylelintignore para excluir directorios de build
- Actualizar .vscode/settings.json para mejor experiencia de CSS linting
- Error fantasu en VS Code por regla deprecated no afecta build/tests

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,5 +38,6 @@
   },
   "stylelint.enable": true,
   "stylelint.validate": ["css", "scss", "postcss"],
+  "stylelint.ignoreDisables": false,
   "chat.mcp.access": "all"
 }
