--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "test:watch": "turbo run test:watch",
     "test:ui": "turbo run test:ui",
     "clean": "turbo clean && rm -rf node_modules",
-    "postinstall": "turbo run postinstall --parallel"
+    "postinstall": "turbo run postinstall --parallel",
+    "convert:svg": "node scripts/convert-svg-professional.mjs"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.9.1",
@@ -26,7 +27,9 @@
     "@vitejs/plugin-react": "^5.1.0",
     "@vitest/ui": "^4.0.5",
     "jsdom": "^27.0.1",
+    "potrace": "^2.1.8",
     "prettier": "^3.3.0",
+    "sharp": "^0.34.4",
     "stylelint": "^16.25.0",
     "stylelint-config-standard": "^39.0.1",
     "turbo": "^2.5.8",
