--- a/package.json
+++ b/package.json
@@ -26,12 +26,15 @@
     "@testing-library/user-event": "^14.6.1",
     "@vitejs/plugin-react": "^5.1.0",
     "@vitest/ui": "^4.0.5",
+    "jimp": "^1.6.0",
     "jsdom": "^27.0.1",
     "potrace": "^2.1.8",
+    "potrace-wasm": "^1.0.4",
     "prettier": "^3.3.0",
     "sharp": "^0.34.4",
     "stylelint": "^16.25.0",
     "stylelint-config-standard": "^39.0.1",
+    "tracer": "^1.3.0",
     "turbo": "^2.5.8",
     "typescript": "^5.9.3",
     "vitest": "^4.0.5"
