--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -50,8 +50,11 @@
     "@vitest/coverage-v8": "^4.0.5",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.38.0",
+    "jimp": "^1.6.0",
     "postcss": "^8.5.6",
+    "potrace": "^2.1.8",
     "prettier": "^3.3.0",
+    "sharp": "^0.34.4",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.9.3"
   }
