--- a/packages/matriz-generator/tsconfig.json
+++ b/packages/matriz-generator/tsconfig.json
@@ -14,11 +14,12 @@
     "noEmit": true,
     "incremental": true,
     "esModuleInterop": true,
+    "ignoreDeprecations": "6.0",
     "baseUrl": ".",
     "paths": {
       "@components/*": ["./src/components/*"],
       "@lib/*": ["./src/lib/*"],
-      "@types/*": ["./src/types/*"],
+      "@types": ["./src/types/index.ts"],
       "@content/*": ["./content/*"]
     },
     "plugins": [
