--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -29,6 +29,7 @@
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.548.0",
+    "maplibre-gl": "^5.10.0",
     "next": "^16.0.1",
     "next-auth": "^4.24.13",
     "papaparse": "^5.5.3",
@@ -43,6 +44,7 @@
   "devDependencies": {
     "@ia-next/eslint-config": "workspace:*",
     "@ia-next/prettier-config": "workspace:*",
+    "@types/maplibre-gl": "^1.14.0",
     "@types/node": "^24.9.2",
     "@types/papaparse": "^5.3.16",
     "@types/react": "^19.2.2",
