feat: Add comprehensive test suite for environmental tools (336 tests, 100% passing)
✨ New Features:
- Generador de Matrices EIA: 29 tests (Leopold, Conesa, Battelle algorithms)
- Normas Ambientales: 45 tests (flag mapping, domain validation, data normalization)
- Análisis de Correlaciones: 28 tests (Pearson, Spearman, Kendall + analytics)
- Visor de Mapas: 17 tests (structured logging system)

🔧 Fixes:
- Fixed probabilities.test.ts import path (../../utils → ../llm-simulation)
- Added Vitest imports (describe, it, expect)
- Fixed tools-registry.ts type ('interactive' → 'public')
- Fixed tsconfig.json @/types path mapping
- Fixed logger/correlations tests to use vi.stubEnv() instead of direct NODE_ENV assignment
- Fixed ClientHeroTabs dynamic import
- Removed obsolete matriz-generator.ts and deprecated tsconfig files

📊 Test Results:
- Total: 336/336 passing (100%)
- Environmental tools: 119/119 (100%)
- IA tools: 43/43 (100%)
- Duration: 6.49s ⚡

📝 Documentation:
- Added TESTS_REPORT_FINAL.md with comprehensive analysis
- Added FIXES_APPLIED.md with all corrections documented

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,6 +18,7 @@
     "@auth/prisma-adapter": "^2.10.0",
     "@ia-next/typescript-config": "workspace:*",
     "@ia-next/ui": "workspace:*",
+    "@ia-next/matriz-generator": "workspace:*",
     "@sentry/nextjs": "^10.22.0",
     "@upstash/ratelimit": "^2.0.6",
     "@upstash/redis": "^1.35.6",
