feat: Implementar sistema completo de consulta de notas
- Crear API REST completa en /api/notes con endpoints GET y POST
- Implementar validaciones de datos y manejo de errores robusto
- Mejorar UI de consulta con loading states y mejor UX
- Agregar componente UploadNotes con validación de archivos Excel
- Crear tabla notes en Supabase con índices optimizados
- Configurar @ia-next/database package con dist compilado
- Agregar endpoint de diagnóstico /api/test-db
- Resolver problema de TypeScript deprecation en tsconfig
- Actualizar .gitignore para excluir archivos de prueba

Funcionalidades:
✅ Consulta de notas por universidad, curso y código
✅ Carga masiva desde Excel con validaciones
✅ Skip de duplicados en inserciones
✅ Búsqueda por código de estudiante
✅ Lista de universidades y cursos disponibles

--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,16 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
+next_dev.log
+next_dev.err
+*.log
+
+# Test files
+test-*.ps1
+test-*.js
+test-*.csv
+create-*.js
+create-*.sql
 
 # Runtime data
 pids
