--- a/packages/@ia-next/database/tsconfig.json
+++ b/packages/@ia-next/database/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "@ia-next/typescript-config/base.json",
   "compilerOptions": {
+    "ignoreDeprecations": "6.0",
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
