--- a/packages/@ia-next/database/package.json
+++ b/packages/@ia-next/database/package.json
@@ -2,8 +2,14 @@
   "name": "@ia-next/database",
   "version": "0.0.1",
   "private": true,
-  "main": "./src/index.ts",
-  "types": "./src/index.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "require": "./dist/index.js"
+    }
+  },
   "scripts": {
     "lint": "eslint src/",
     "typecheck": "tsc --noEmit",
